Fix blurred font on mobile safari.

--- a/css/modules/projects.sass
+++ b/css/modules/projects.sass
@@ -5,6 +5,7 @@
   h1
     font-size: 4em
     padding-bottom: 0.2em
+    -webkit-filter: blur(0)
   h3
     font-size: 3.5em
     font-family: $proxima-light-italic
